--- a/lanchonete2.html
+++ b/lanchonete2.html
@@ -502,7 +502,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="lanche_completo.jpg" alt="Combo Família">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fesburguervilamaria.menudino.com%2F&psig=AOvVaw0xYTIyrm-xYhbUk0zR4OIV&ust=1733924227620000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCKCymaWpnYoDFQAAAAAdAAAAABAK" alt="Combo Família">
                 <div class="menu-item-content">
                     <h3>Combo Família</h3>
                     <p>4 hambúrgueres, batatas fritas e refrigerante 2L</p>
