Atualização da imagem de logo

--- a/lanchonete2.html
+++ b/lanchonete2.html
@@ -502,7 +502,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="lanche_completo.png" alt="Combo Família">
+                <img src="lanche_completo.jpg" alt="Combo Família">
                 <div class="menu-item-content">
                     <h3>Combo Família</h3>
                     <p>4 hambúrgueres, batatas fritas e refrigerante 2L</p>
