link da entrega pra voltar ao inicio

--- a/entrega.html
+++ b/entrega.html
@@ -188,7 +188,7 @@
             </div>
         </div>
 
-        <a href="lanchonete2.html" class="back-button">Voltar para o Início</a>
+        <a href="index.html" class="back-button">Voltar para o Início</a>
     </div>
     <script src="scriptentrega.js"></script>
 </body>
